# moqtail

./: .gitignore  INSTALLATION.md  README.md  package-lock.json  package.json
apps/client-js/: package.json  tsconfig.app.json  vite.config.ts
apps/client-js/docs/: experiment-quick-reference.md  filtered-playback-experiments.md
apps/client-js/src/: app.tsx
apps/publisher/: Cargo.toml
apps/publisher/src/: adaptive.rs  cache.rs  catalog.rs  cli.rs  cmaf.rs  decoder.rs  encoder.rs  main.rs  pacing.rs  replay.rs  scaler.rs  sender.rs  video.rs
libs/moqtail-ts/: tsup.config.ts
paper/: .gitignore  Makefile  README.md  pyproject.toml
paper/figures/: _data.py  _style.py  fig1_architecture.tex
paper/notebooks/: fig2_e1_e2_playhead_gap.ipynb  fig2_e2_e3_playhead_gap.ipynb  fig3_trace_naive_vs_aligned.ipynb  fig4_e3_unfiltered_naive.ipynb  fig4_e4_cache_boundary.ipynb  fig5_e4_composability.ipynb  fig5_e6_composability.ipynb  fig5b_e6_goodput.ipynb  fig5c_e6_throughput.ipynb  fig6_e5_unfiltered_naive.ipynb  fig6b_e5_goodput.ipynb  fig6c_e5_throughput.ipynb  fig7_e7_aligned.ipynb  fig7b_e7_goodput.ipynb  fig7c_e7_throughput.ipynb
paper/tests/: test_data.py  test_notebooks_execute.py  test_style.py
scripts/: prepare_tears_of_steel.sh  run-experiments.sh  run-stack.sh
tests/experiments/: abr_configs.py  aggregate.py  conftest.py  profiles.py  pyproject.toml  summary.py  test_aggregate.py  test_e1_baseline.py  test_e1_naive_switch.py  test_e2_aligned_switch.py  test_e2_naive_switch.py  test_e3_aligned_switch.py  test_e3_unfiltered_naive.py  test_e4_abr_composability.py  test_e4_cache_boundary.py  test_e5_unfiltered_naive.py  test_e6_abr_composability.py  test_e7_aligned_zero_delay.py  test_profiles.py  test_summary.py  test_trace_helpers.py  trace_helpers.py
tests/network/: assertions.py  config.yaml  conftest.py  debug.md  metrics_collector.py  pyproject.toml  relay_log_parser.py  setup.sh  shaper.py  topology.py
tests/network/scenarios/: test_aligned_switch.py  test_bandwidth_recovery.py  test_filtered_connect.py  test_gradual_ramp_down.py  test_high_latency.py  test_naive_switch_discontinuity.py  test_oscillation_resistance.py  test_packet_loss.py  test_publisher_degradation.py  test_smoke.py  test_sudden_drop.py
(+68 files in other folders)
