[project]
name = "paper"
version = "0.1.0"
description = "Figure generation for the MMSys 2026 paper on aligned MoQ switching"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.9.0",
    "pandas>=2.2.0",
    "seaborn>=0.13.0",
    "numpy>=2.0.0",
    "jupyter>=1.1.0",
    "nbconvert>=7.16.0",
    "ipykernel>=6.29.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "jupytext>=1.16.0",
    "nbstripout>=0.7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["figures"]
