[package]
name = "publisher"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
mp4 = "0.14"
tokio = { version = "1.50.0", features = ["full"] }
anyhow = "1.0.102"
bytes = "1.11.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
wtransport = { workspace = true, features = ["dangerous-configuration"] }
moqtail = { version = "*", path = "../../libs/moqtail-rs" }
ffmpeg-next = "8.1.0"
tokio-util = "0.7"
serde_json = "1"
base64 = "0.22"

[features]
default = []
# Enable VA-API HEVC hardware encoding on AMD GPUs (Linux).
# Requires FFmpeg ≥ 5.0 headers (for the unified `AV_PIX_FMT_VAAPI` binding) and
# libva. Activated at runtime only when the DRM render node reports AMD
# (PCI vendor 0x1002); Intel VA-API devices fall through to libx265.
vaapi = []
